force-app/main/default/objects/ANZ_Network_Allow_List__mdt/ANZ_Network_Allow_List__mdt.object-meta.xml
<CustomObject>
    <description>List of ANZ network to be used in Transaction Security Policy - nonANZNetworkHandler</description>
    <label>ANZ Network Allow List</label>
    <pluralLabel>ANZ Network Allow Lists</pluralLabel>
</CustomObject>