force-app/main/default/objects/ANZ_Network_Allow_List__mdt/fields/First_Decimal__c.field-meta.xml
<CustomField>
    <fullName>First_Decimal__c</fullName>
    <description>Decimal Number of the first IP Address</description>
    <label>First Decimal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>