force-app/main/default/objects/ANZ_Network_Allow_List__mdt/fields/First_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>First_IP_Address__c</fullName>
    <description>First IP Address of the allowed IP ranges</description>
    <label>First IP Address</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>