force-app/main/default/objects/ANZ_Network_Allow_List__mdt/fields/Last_Decimal__c.field-meta.xml
<CustomField>
    <fullName>Last_Decimal__c</fullName>
    <description>Last Decimal number of the last IP Address</description>
    <label>Last Decimal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>