force-app/main/default/objects/ANZ_Network_Allow_List__mdt/fields/Last_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Last_IP_Address__c</fullName>
    <description>The last IP Address of the allowed IP range</description>
    <label>Last IP Address</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>